--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     <!-- Banner Section -->
     <header id="home">
-        <h1>Bakulan Komputer dan Laptop</h1>
-        <p>Bahagiamu Bahagiaku</p>
+        <h1>Tempat Jualan Komputer, Laptop dan HP</h1>
+        <p>Murah Meriah</p>
         <div class="banner">
             <div class="slides">
                 <div class="slide"><img src="assets/1.jpg" alt="Slide 1"></div>
@@ -96,48 +96,97 @@
         <h2>Our Package</h2>
         <div class="packages-container">
             <div class="package" id="kom1">
-                <img src="assets/k1.jpeg" alt="kom1">
+                <img src="assets/k1.jpeg" alt="PC Gaming 1">
                 <h3>PC Gaming</h3>
-                <p>Mahal</p>
+                <p>PC dengan spek kelas atas</p>
+                <p class="price">Rp20.000.000</p>
+                <button class="package-button" onclick="showAlert('PC Gaming', 'Rp20.000.000')">Beli</button>
             </div>
             <div class="package" id="kom2">
-                <img src="assets/k2.jpg" alt="kom2">
+                <img src="assets/k2.jpg" alt="PC Gaming 2">
                 <h3>PC Gaming</h3>
-                <p>Mahal</p>
+                <p>PC dengan spek kelas atas</p>
+                <p class="price">Rp25.000.000</p>
+                <button class="package-button" onclick="showAlert('PC Gaming', 'Rp25.000.000')">Beli</button>
             </div>
             <div class="package" id="lap1">
-                <img src="assets/k3.jpg" alt="lap1">
+                <img src="assets/k3.jpg" alt="Laptop Gaming 1">
                 <h3>Laptop Gaming</h3>
-                <p>Mahal</p>
+                <p>Laptop dengan spesifikasi kelas atas </p>
+                <p class="price">Rp15.000.000</p>
+                <button class="package-button" onclick="showAlert('Laptop Gaming', 'Rp15.000.000')">Beli</button>
             </div>
             <div class="package" id="lap2">
-                <img src="assets/k4.png" alt="lap2">
+                <img src="assets/k4.png" alt="Laptop Gaming 2">
                 <h3>Laptop Gaming</h3>
-                <p>Mahal</p>
+                <p>Laptop dengan spesifikasi kelas atas</p>
+                <p class="price">Rp16.000.000</p>
+                <button class="package-button" onclick="showAlert('Laptop Gaming', 'Rp16.000.000')">Beli</button>
             </div>
             <div class="package" id="hp1">
-                <img src="assets/k5.jpg" alt="hp1">
+                <img src="assets/k5.jpg" alt="HP Gaming 1">
                 <h3>HP Gaming</h3>
-                <p>Mahal</p>
+                <p>HandPhone dengan kemampuan sangar</p>
+                <p class="price">Rp11.000.000</p>
+                <button class="package-button" onclick="showAlert('HP Gaming', 'Rp11.000.000')">Beli</button>
             </div>
             <div class="package" id="hp2">
-                <img src="assets/k6.jpg" alt="hp2">
+                <img src="assets/k6.jpg" alt="HP Gaming 2">
                 <h3>HP Gaming</h3>
-                <p>Mahal</p>
+                <p>HandPhone dengan kemampuan sangar</p>
+                <p class="price">Rp12.000.000</p>
+                <button class="package-button" onclick="showAlert('HP Gaming', 'Rp12.000.000')">Beli</button>
             </div>
         </div>
     </section>
+    
 
     <!-- Call to Action Section -->
     <section id="call-to-action">
-        <h2>BELI BANG</h2>
-        <p>APA YAAA</p>
-        <button id="cta-button">Call to Action</button>
+        <h2>Terima Kasih Sudah Mengunjungi</h2>
+        <p>Discover amazing products and deals that suit your needs. Don't miss out on our exclusive offers!</p>
+        <button id="cta-button" onclick="performAction()">Call to Action</button>
+        <div id="loading" class="loading-spinner" style="display: none;"></div>
     </section>
 
     <footer>
-        <p>&copy; 2024 IX | Terms of Service | Privacy Policy</p>
+        <div class="footer-container">
+            <div class="footer-logo">
+                <img src="assets/IX.png" alt="yoks Logo">
+            </div>
+            <div class="footer-content">
+                <div class="footer-section company-info">
+                    <h4>About Me</h4>
+                    <p>Saya Sedang dalam proses belajar </p>
+                </div>
+                <div class="footer-section quick-links">
+                    <h4>Quick Links</h4>
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#packages">Our Package</a></li>
+                        <li><a href="#contact">Contact Us</a></li>
+
+                    </ul>
+                </div>
+                <div class="footer-section social-media">
+                    <h4>Follow Us</h4>
+                    <div class="social-icons">
+                        <a href="https://x.com/aryokss"><img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Twitter_new_X_logo.png" alt="Twitter"></a>
+                        <a href="https://instagram.com/aryaeka.r.p"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/1000px-Instagram_logo_2022.svg.png" alt="Instagram"></a>
+                    </div>
+                </div>
+                <div class="footer-section contact-info">
+                    <h4>Contact Me</h4>
+                    <p>Email: ix@aryok.me</p>
+                    <p>Phone: +62 9999 9999 9999</p>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; IX.</p>
+        </div>
     </footer>
+    
 
     <script src="script/script.js"></script>
 </body>
