--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#packages">Our Package</a></li>
-            <li><a href="#contact">Call Us</a></li>
+            <li><a href="#contact">Call Me</a></li>
         </ul>
         <div class="hamburger">
             <img src="assets/menu.jpg" class="hamburger-icon" alt="Menu">
@@ -71,7 +71,7 @@
             </div>
             </div>
             <div class="contact-form">
-                <h2>Contact Us</h2>
+                <h2>Contact Me</h2>
                 <p>Sales akan menghubungi anda 1x24 Jam setelah data kami terima.</p>
                 <form id="contact-form" onsubmit="return validateForm()">
                     <label for="name">Your Name:</label>
@@ -164,7 +164,7 @@
                     <ul>
                         <li><a href="#home">Home</a></li>
                         <li><a href="#packages">Our Package</a></li>
-                        <li><a href="#contact">Contact Us</a></li>
+                        <li><a href="#contact">Contact Me</a></li>
 
                     </ul>
                 </div>
