--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
             <div class="contact-form">
                 <h2>Contact Me</h2>
-                <p>Sales akan menghubungi anda 1x24 Jam setelah data kami terima.</p>
+                <p>Saya akan menghubungi anda 1x24 Jam setelah data kami terima.</p>
                 <form id="contact-form" onsubmit="return validateForm()">
                     <label for="name">Your Name:</label>
                     <input type="text" id="name" name="name" placeholder="First and last name" required>
