--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
-            <li><a href="#packages">Our Package</a></li>
+            <li><a href="#packages">Produk</a></li>
             <li><a href="#contact">Call Me</a></li>
         </ul>
         <div class="hamburger">
@@ -93,7 +93,7 @@
 
     <!-- Our Package Section -->
     <section id="packages">
-        <h2>Our Package</h2>
+        <h2>Produk</h2>
         <div class="packages-container">
             <div class="package" id="kom1">
                 <img src="assets/k1.jpeg" alt="PC Gaming 1">
@@ -163,7 +163,7 @@
                     <h4>Quick Links</h4>
                     <ul>
                         <li><a href="#home">Home</a></li>
-                        <li><a href="#packages">Our Package</a></li>
+                        <li><a href="#packages">Produk</a></li>
                         <li><a href="#contact">Contact Me</a></li>
 
                     </ul>
