--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; IX.</p>
+            <a href="https://porto.aryok.me>&copy; IX.</a>
         </div>
     </footer>
     
